[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
common = { path = "../common" }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
leptos-use = { version = "0.10.5", features = [] }
leptos_meta = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.9", features = ["nightly", "csr"] }
once_cell = "1.19.0"
phosphor-leptos = "0.3.1"
reqwest = { version = "0.12.1" }
web-sys = { version = "0.3.69", features = [
    "Location",
    "Document",
    "HtmlInputElement",
] }
serde.json = true
serde_json.workspace = true
