[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-openai = "0.19.1"
chrono.workspace = true
common = { path = "../common" }
crossbeam = "0.8.4"
once_cell = "1.19.0"
pollster = "0.3.0"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde.workspace = true
serde_json = "1.0.114"
dotenv = "0.15.0"
audiotags = "0.5.0"
bitcode.workspace = true
axum = "0.7.4"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
